// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sentry /> should render correctly when disabled 1`] = `
<SettingsCheckbox
  enabled={false}
  onToggle={[MockFunction]}
>
  <strong>
    Sentry
  </strong>
  <small>
    Enable or disable Sentry error reporting. Error reporting allows the developers to prevent future errors.
  </small>
</SettingsCheckbox>
`;

exports[`<Sentry /> should render correctly when enabled 1`] = `
<SettingsCheckbox
  enabled={true}
  onToggle={[MockFunction]}
>
  <strong>
    Sentry
  </strong>
  <small>
    Enable or disable Sentry error reporting. Error reporting allows the developers to prevent future errors.
  </small>
</SettingsCheckbox>
`;
